--- a/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
+++ b/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
@@ -28,11 +28,11 @@
     <div class="version-info">
       <div class="version-row">
         <span class="label">Current Version:</span>
-        <span class="version current">{{ data.updateInfo.current_version_clean }}</span>
+        <span class="version current">{{ data.current_version_clean }}</span>
       </div>
       <div class="version-row">
         <span class="label">Latest Version:</span>
-        <span class="version latest">{{ data.updateInfo.latest_version_clean }}</span>
+        <span class="version latest">{{ data.latest_version_clean }}</span>
       </div>
       <mat-divider></mat-divider>
       <button mat-stroked-button color="accent" (click)="openChangelog()">
